#7 [Wandy, Isa] - Corrects margin-to on desktop home section to a fixed spacing

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -24,7 +24,7 @@
   @include get-font(NACIONAL);
 
   @include media-query(MEDIUM) {
-    margin: 20% 5% 0 5%; 
+    margin: 200px 5% 0 5%; 
     width: 90%;
   }
 }
